--- a/di-21-zhang-linux-jian-rong-ceng/di-21.13-jie-linux-jian-rong-ceng-gu-zhang-pai-chu-yu-pei-zhi.md
+++ b/di-21-zhang-linux-jian-rong-ceng/di-21.13-jie-linux-jian-rong-ceng-gu-zhang-pai-chu-yu-pei-zhi.md
@@ -6,13 +6,14 @@
 
 Ubuntu 兼容层：
 
-```shell
-# ee /compat/ubuntu/etc/asound.conf # 写入以下两行，注意那是感叹号 ! 不是 1
+编辑 `/compat/ubuntu/etc/asound.conf`，写入以下两行，注意那是英文感叹号 `!` 不是数字 `1`。
+
+```sh
 pcm.!sysdefault pcm.plug:oss
 pcm.!default pcm.sysdefault
 ```
 
-## 直接从 FreeBSD 的命令行运行软件（以 Ubuntu 兼容层为例）
+## 直接从 FreeBSD 的命令行运行软件（基于 Ubuntu 兼容层）
 
 直接从 FreeBSD 的命令行运行软件而不需要 chroot 的方法：
 
@@ -34,7 +35,7 @@ pcm.!default pcm.sysdefault
 
 **Arch 和 OpenSUSE 兼容层只需要 ①，无需 ②**
 
-参考文献：
+### 参考文献
 
 - [FREEBSD, SYSTEM ADMINISTRATION Install Ubuntu base system into FreeBSD’s Linux Binary Compatibility](https://www.micski.dk/2021/12/21/install-ubuntu-base-system-into-freebsds-linux-binary-compatibility/)
 
