--- a/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
@@ -80,7 +80,7 @@ test_5G                           50:d6:c5:93:d7:64   36   54M  -78:-95   100 EP
 # ifconfig wlan0 ssid test_5G #①
 ```
 
-- ① `test_5G` 为我测试用的 WiFi 名字（SSID）
+① `test_5G` 为我测试用的 WiFi 名字（SSID）
 
 - 如果扫描不出来，把 WiFi 区域改为中国：
 
