--- a/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
@@ -60,11 +60,11 @@ wlan0: flags=8802<BROADCAST,SIMPLEX,MULTICAST> metric 0 mtu 1500
 应该出现一个 `wlan0` 才对。
 
 
-- 扫描 WiFi：
+### 扫描 WiFi
 
 ```sh
 # ifconfig wlan0 up scan
-root@ykla:~ # ifconfig wlan0 up scan
+# ifconfig wlan0 up scan
 SSID/MESH ID                      BSSID              CHAN RATE    S:N     INT CAPS
 
 ……此处省略一部分……
