--- a/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
@@ -23,7 +23,7 @@
 运行 `sysctl net.wlan.devices`，他会告诉你的无线网卡驱动，应类似如下内容：
 
 ```sh
-root@ykla:~ # sysctl net.wlan.devices
+# sysctl net.wlan.devices
 net.wlan.devices: rtwn0
 ```
 
@@ -64,7 +64,6 @@ wlan0: flags=8802<BROADCAST,SIMPLEX,MULTICAST> metric 0 mtu 1500
 
 ```sh
 # ifconfig wlan0 up scan
-# ifconfig wlan0 up scan
 SSID/MESH ID                      BSSID              CHAN RATE    S:N     INT CAPS
 
 ……此处省略一部分……
@@ -85,7 +84,9 @@ test_5G                           50:d6:c5:93:d7:64   36   54M  -78:-95   100 EP
 - 如果扫描不出来，把 WiFi 区域改为中国：
 
 ```sh
-# ifconfig wlan0 country CN
+# ifconfig wlan0 destroy # 先销毁，否则提示 ifconfig: SIOCS80211: Device busy
+# ifconfig wlan0 create wlandev rtwn0 # 再创建
+# ifconfig wlan0 country CN regdomain NONE # 设置区域为中国，使用 NONE
 ```
 
 - 重启网络服务以接入 WiFi：
