--- a/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
+++ b/di-14-zhang-wang-luo-guan-li/di-14.2-jie-wifi.md
@@ -20,14 +20,14 @@
 
 ### 检测无线网卡是否受支持
 
-运行 `sysctl net.wlan.devices`，他会告诉你的无线网卡驱动，应类似如下内容：
+运行 `sysctl net.wlan.devices`：他会告诉你，你的无线网卡驱动应该使用哪个。应类似如下内容：
 
 ```sh
 # sysctl net.wlan.devices
 net.wlan.devices: rtwn0
 ```
 
-如果输出中冒号 `:` 后边没有东西，那就是识别不了。请你更换无线网卡。
+如果输出中冒号 `:` 后边没有东西，那大概率就是识别不了。请你更换无线网卡。
 
 ### 创建 `wlan0`
 
