--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -120,3 +120,40 @@ $ ln  ~/.xinitrc  ~/.xsession
 ### 参考文献
 
 - [成功尝试在 NetBSD9.0 中安装 Mate 桌面环境](https://www.bilibili.com/read/cv17144331)
+
+## KDE 4
+
+>**技巧**
+>
+>本节物理机在 UEFI 下测试成功。
+
+>**警告**
+>
+>在 VB、VM 下目前无法正常进入桌面（UEFI），进去就黑屏，已经报告 [NetBSD Problem Report #57554](https://gnats.netbsd.org/cgi-bin/query-pr-single.pl?number=57554)，如果你知道什么原因请告诉我。
+
+- 安装：
+
+```sh
+# pkgin in kde noto-cjk-fonts readline libcups ee
+```
+
+- 配置：
+
+```
+# cp /usr/pkg/share/examples/rc.d/* /etc/rc.d
+# echo dbus=YES >> /etc/rc.conf
+# echo kdm=YES >> /etc/rc.conf
+# echo rpcbind=YES >> /etc/rc.conf
+# echo avahidaemon=YES >> /etc/rc.conf
+# echo hostname=ykla >> /etc/rc.conf # 设置主机名，可以替换为你的名字
+```
+
+重启系统。
+
+默认状态下允许 root 登录。
+
+### 参考文献
+
+- [NetBSD Wiki/GNOME](https://wiki.netbsd.org/GNOME/)
+- [How can I start kde5 in netBSD9 ?](https://www.unix.com/unix-for-beginners-questions-and-answers/283891-how-can-i-start-kde5-netbsd9.html)
+- [Re: How to install KDE on NetBSD?](https://www.mail-archive.com/netbsd-users@netbsd.org/msg13146.html)
