--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -125,13 +125,13 @@ $ ln  ~/.xinitrc  ~/.xsession
 
 >**技巧**
 >
->本节物理机在 UEFI 下测试成功。
+>本节物理机在下测试成功。物理机能正常进入桌面（UEFI）。
 
 >**警告**
 >
 >在 VB、VM 下目前无法正常进入桌面（UEFI），进去就黑屏，已经报告 [NetBSD Problem Report #57554](https://gnats.netbsd.org/cgi-bin/query-pr-single.pl?number=57554)，如果你知道什么原因请告诉我。
 
-- 安装：
+- 安装主要程序：
 
 ```sh
 # pkgin in kde noto-cjk-fonts readline libcups ee
@@ -139,7 +139,7 @@ $ ln  ~/.xinitrc  ~/.xsession
 
 - 配置：
 
-```
+```sh
 # cp /usr/pkg/share/examples/rc.d/* /etc/rc.d
 # echo dbus=YES >> /etc/rc.conf
 # echo kdm=YES >> /etc/rc.conf
@@ -148,9 +148,15 @@ $ ln  ~/.xinitrc  ~/.xsession
 # echo hostname=ykla >> /etc/rc.conf # 设置主机名，可以替换为你的名字
 ```
 
-重启系统。
+`reboot` 重启系统。
 
 默认状态下允许 root 登录。
+
+### 故障排除
+
+- 没有中文
+
+因为 KDE5 的关系，中文语言包已经被删除了，见 [NOTICE: This package has been removed from pkgsrc](https://pkgsrc.se/x11/kde4-l10n-zh_CN)。
 
 ### 参考文献
 
