--- a/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
+++ b/di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md
@@ -145,7 +145,7 @@ $ ln  ~/.xinitrc  ~/.xsession
 # echo kdm=YES >> /etc/rc.conf
 # echo rpcbind=YES >> /etc/rc.conf
 # echo avahidaemon=YES >> /etc/rc.conf
-# echo hostname=ykla >> /etc/rc.conf # 设置主机名，可以替换为你的名字
+# echo hostname=ykla >> /etc/rc.conf # 设置主机名，请将 "ykla" 替换为你想使用的主机名
 ```
 
 `reboot` 重启系统。
