“第 27.4 节 桌面与中文环境常用软件”：重写引入：KDE 4。因为物理机测试成功。 (#300)
* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* Update di-7.1-jie-http-dai-li.md

* Update di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md

* Update di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md

* Update di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

* Update CHANGELOG.md

* Update di-27-zhang-netbsd/di-27.4-jie-zhuo-mian-yu-qi-ta-ruan-jian.md

Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

---------

Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

--- a/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
+++ b/di-27-zhang-netbsd/di-27.3-jie-huan-yuan-yu-bao-guan-li-qi.md
@@ -49,3 +49,20 @@ ykla# make install clean
 ===> Installing dependencies for mktools-20250213
 ……省略……
 ```
+
+## pkgsrc-wip 项目
+
+看起来是很多未完成的项目。但是有很多软件依赖于此。
+
+```sh
+# mkdir -p  /usr/pkgsrc/ # 创建目录。可能不存在
+# cd /usr/pkgsrc/ # 进入目录
+# pkgin install git # 安装 git
+# git config --global http.proxy http://192.168.31.77:7890 # 设置代理。照抄不管用
+# git config --global https.proxy http://192.168.31.77:7890 # 设置代理。照抄不管用
+# git clone --depth 1 https://github.com/NetBSD/pkgsrc-wip wip # 拉取项目
+```
+
+### 参考文献
+
+- [The pkgsrc-wip project](https://pkgsrc.org/wip)，官方使用说明
