--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.10-jie-tong-guo-ida-7-tiao-shi-freebsd.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.10-jie-tong-guo-ida-7-tiao-shi-freebsd.md
@@ -2,7 +2,7 @@
 
 >**注意**
 >
->Windows、IDA、FreeBSD、FreeBSD 兼容层均需要 64 位，否则可能无法正常使用。
+>Windows、IDA、FreeBSD 均需要 64 位，否则可能无法正常使用。
 
 首先在 Windwos 系统里 IDA 的安装路径里找到 dbgsrv 文件夹里的 `linux_server64` 文件。
 
