--- a/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
+++ b/di-17-zhang-wang-luo-fu-wu-qi/di-17.8-jie-postgresql-yu-pgadmin4.md
@@ -241,7 +241,7 @@ root@ykla:~ #
 
 这样可以简化一些初始化工作。同样也可以利用 `postgresql_initdb_flags` 参数灵活控制初始化工作。
 
-### 管理多个数据库实例 (集簇)
+### 管理多个数据库实例（集簇）
 
 PostgreSQL 能在一台机器上运行多个实例，这在测试不同配置，隔离环境时非常有用。
 
