--- a/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
@@ -85,7 +85,7 @@ All Samba related bug reports should go to the: https://bugzilla.samba.org/
 [root]
     comment = root's stuff
     path = /root
-    public = yes
+    public = no
     browseable = yes
     writable = yes
     printable = no
@@ -99,7 +99,7 @@ All Samba related bug reports should go to the: https://bugzilla.samba.org/
 - `[root]`：定义一个名为 `root` 的共享。
 - `comment = root's stuff`：该共享的描述信息，Windows 浏览器中可见。
 - `path = /root`：共享的实际路径是 `/root`，**不推荐**在实际环境中共享该目录。
-- `public = yes`：允许匿名访问（等同于 `guest ok = yes`）。
+- `public = no`：不允许匿名访问（等同于 `guest ok = no`）。
 - `browseable = yes`：可在网络邻居中浏览共享。
 - `writable = yes`：允许客户端对该目录进行写入。
 - `printable = no`：不是打印机共享。
