--- a/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
@@ -128,7 +128,11 @@ nmbd is running as pid 1520.
 smbd is running as pid 1525.
 ```
 
-- 在 Windows 下使用如下命令访问共享文件夹（以实际 IP 为准，照抄不管用！），打开运行，输入：
+- 在 Windows 下使用如下命令访问共享文件夹（以实际 IP 为准，照抄不管用！）：
+
+>**技巧**
+>
+>在 Windows 下访问共享文件夹说明：按下 Windows 键 + **R**（小写 r 也可以） 打开“运行”对话框。在对话框中输入以下命令（以实际 IP 地址和共享文件夹名替换示例中的内容）：
 
 ```batch
 \\192.168.179.150
