重写：第 16.7 节 Samba 服务器中的安装 Samba 部分，其余部分无条件测试 (#308)
* 补图

* Update di-16.7-jie-samba-fu-wu-qi.md

* Update CHANGELOG.md

* Update di-16.7-jie-samba-fu-wu-qi.md

* Update di-16.7-jie-samba-fu-wu-qi.md

* Update di-16.7-jie-samba-fu-wu-qi.md

--- a/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
@@ -2,41 +2,83 @@
 
 samba 须开放防火墙的 tcp/139、445 端口；udp/137、138 端口。
 
-## 设置 samba 为独立服务器
 
-### 安装 samba
+## 安装 samba
+
+- 使用 pkg 安装：
 
 ```sh
-# pkg install samba419
+# pkg install samba420
 ```
 
-或
+- 或使用 Ports 安装：
 
 ```
-# cd /usr/ports/net/samba419/ 
+# cd /usr/ports/net/samba420/ 
 # make install clean
 ```
 
-### 配置 samba
+## 查看安装后说明
 
-- 打开/etc/rc.conf
+```
+# pkg info -D samba420
+samba420-4.20.7_4:
+On install:  # 安装提示：
+How to start: http://wiki.samba.org/index.php/Samba4/HOWTO  
+如何启动：参见官方指南
 
-```sh
-# ee /etc/rc.conf
+* Your configuration is: /usr/local/etc/smb4.conf
+* 你的配置文件路径是：/usr/local/etc/smb4.conf
+
+* All the relevant databases are under: /var/db/samba4
+* 所有相关数据库位于：/var/db/samba4
+
+* All the logs are under: /var/log/samba4
+* 所有日志位于：/var/log/samba4
+
+* Provisioning script is: /usr/local/bin/samba-tool
+* # 初始化脚本是：/usr/local/bin/samba-tool
+
+For the working DNS updates you will need to either build dns/bind9* 
+# 若需正常使用 DNS 更新功能，你需要：
+with the enabled GSSAPI(GSSAPI_MIT5 is recommended) or install        
+# 要么构建启用了 GSSAPI（推荐 GSSAPI_MIT5）的 dns/bind9*，
+dns/samba-nsupdate package, which is preconfigured with such a support. 
+# 要么安装 dns/samba-nsupdate 包，它已预配置了所需支持。
+
+You will need to specify location of the 'nsupdate' command in the    
+smb4.conf file:
+# 你需要在 smb4.conf 中指定 nsupdate 命令的位置：
+
+    nsupdate command = /usr/local/bin/samba-nsupdate -g  # 示例配置
+
+For additional documentation check: https://wiki.samba.org/index.php/User_Documentation  
+# 更多文档请查阅：
+
+Port related bug reports can go to the https://gitlab.com/samba-freebsd/ports/-/issues or  
+# 和 FreeBSD port 相关的问题请提交到：
+
+to the FreeBSD Bugzilla https://bugs.freebsd.org/
+
+# 所有 Samba 本身相关的问题请提交到：
+All Samba related bug reports should go to the: https://bugzilla.samba.org/  
 ```
 
-- 在 `/etc/rc.conf` 最后加入如下，并保存：
+## 配置 samba
 
-```ini
-nmbd_enable="YES"
-winbindd_enable="YES"
-samba_enable="YES"
-samba_server_enable="YES"
+- 配置服务
+
+```sh
+# service samba_server enable
 ```
 
 - 创建 `/usr/local/etc/smb4.conf`，添加如下内容并保存
 
+
 ```ini
+[global]
+    min protocol = SMB2
+
 [root]
     comment = root's stuff
     path = /root
@@ -47,41 +89,61 @@ samba_server_enable="YES"
     create mask = 0755
 ```
 
-- 创建 samba root 用户：
+注释说明：
+
+- `[global]`：全局配置段，适用于所有共享项。
+- `min protocol = SMB2`：将最小支持协议限制为 SMB2，以方便高版本 Windows 访问
+- `[root]`：定义一个名为 `root` 的共享。
+- `comment = root's stuff`：该共享的描述信息，Windows 浏览器中可见。
+- `path = /root`：共享的实际路径是 `/root`，**不推荐**在实际环境中共享该目录。
+- `public = no`：不允许匿名访问（等同于 `guest ok = no`）。
+- `browseable = yes`：可在网络邻居中浏览共享。
+- `writable = yes`：允许客户端对该目录进行写入。
+- `printable = no`：不是打印机共享。
+- `create mask = 0755`：新建文件默认权限为 755，所有者读写，组和其他用户只读。
+
+---
+
+- 创建 samba root 用户，并配置密码：
 
 ```sh
 # smbpasswd -a root
 ```
 
-- 进入 `/usr/local/etc`
+- 启动服务
 
 ```sh
-# cd /usr/local/etc
+# service samba_server start 
 ```
 
-- 再执行
-
-```sh
-# service samba_server start //启动命令
-```
-
-或
-
-```sh
-# service samba_server restart //重启命令
-```
 
 - 查看 samba 状态：
 
 ```sh
 # service samba_server status
+nmbd is running as pid 1520.
+smbd is running as pid 1525.
 ```
 
-- 在 windows 下利用 192.168.X.X 访问共享文件夹（以实际 IP 为准，Windows 需要先开启 SMB 1.0 支持）
+- 在 Windows 下使用如下命令访问共享文件夹（以实际 IP 为准，照抄不管用！）：
 
-```sh
-192.168.X.X
+>**技巧**
+>
+>在 Windows 下访问共享文件夹说明：按下 Windows 键 + **R**（小写 r 也可以） 打开“运行”对话框。在对话框中输入以下命令（以实际 IP 地址和共享文件夹名替换示例中的内容）：
+
+```batch
+\\192.168.179.150
 ```
+
+![](../.gitbook/assets/samba1.png)
+
+输入刚才创建的用户名 `root`，以及密码：
+
+![](../.gitbook/assets/samba2.png)
+
+连接成功：
+
+![](../.gitbook/assets/samba3.png)
 
 ## 将 Samba 设置为域成员
 
@@ -92,7 +154,7 @@ samba_server_enable="YES"
 使用如下命令配置：
 
 ```sh
-bsdconfig
+# bsdconfig
 ```
 
 ### 配置主机名
@@ -271,3 +333,7 @@ getent group
 ```sh
 # chmod -R 0700 /samba/testshare
 ```
+
+## 故障排除与未竞事宜
+
+Samba 日志位于 `/var/log/samba4`。
