--- a/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
@@ -14,24 +14,33 @@
 
 ## 服务器 B（同步源）配置
 
-### 安装 rsync 软件包
+### 安装 rsync
+
+- 使用 pkg 安装：
 
 ```sh
 # pkg install rsync
 ```
 
-或
+- 或使用 Ports 安装：
 
 ```
 # cd /usr/ports/net/rsync/ 
 # make install clean
 ```
 
-### 查询已安装 rsync 软件包的信息
+### 查询 rsync 安装后信息
 
 ```sh
-# pkg info | grep rsync
-rsync-3.2.3
+root@ykla:~ #  pkg info -D rsync
+rsync-3.4.1_2:
+On install:
+Some scripts provided by rsync, such as rrsync,
+require Python, which is not installed by default.
+
+安装提示：  
+rsync 提供的一些脚本（例如 rrsync）需要 Python
+而 Python 默认未安装。
 ```
 
 ### 新建需要备份的文件夹 `test`，并且设置其属主为 `root`，以及在其内部新建测试文件
@@ -45,68 +54,83 @@ rsync-3.2.3
 
 ### 编辑 `rsyncd.conf` 文件
 
-```sh
-# ee /usr/local/etc/rsync/rsyncd.conf
 
+编辑 `/usr/local/etc/rsync/rsyncd.conf`，写入：
+
+```sh
+# 服务端操作系统的用户
 uid = root
-#服务端操作系统的用户
+
+# 服务端操作系统的用户的组
 gid = wheel
-#服务端操作系统的用户的组
+
+# 禁锢在源目录
 use chroot = yes
-#禁锢在源目录
+
+# 监听地址
 address = 192.168.100.20
-#监听地址
-port 873
-#用于通信的 TCP 端口，缺省是 873
+
+# 用于通信的 TCP 端口，缺省是 873
+port = 873
+
+# 日志文件位置
 log file = /var/log/rsyncd.log
-#日志文件位置
+
+# 存档进程 ID 的文件位置
 pid file = /var/run/rsyncd.pid
-#存档进程 ID 的文件位置
+
+# 允许访问的客户机地址
 hosts allow = 192.168.100.0/24
-#允许访问的客户机地址
+
 
 [testcom]
-#共享模块名称，自定义的名称，不一定要与同步目录相同
-path = /home/test
-#同步的目录名，必须是  uid 参数指定的用户和 gid 参数指定的组
-comment = testcombackup
-#模块说明文字
-read only = yes
-#是否为只读
-dont compress   = *.gz *.tgz *.zip *.z *.Z *.rpm *.deb *.bz2
-#同步时不再压缩的文件类型
 
+# 共享模块名称，自定义的名称，不一定要与同步目录相同
+# 同步的目录名，必须是 uid 参数指定的用户和 gid 参数指定的组
+path = /home/test
+
+# 模块说明文字
+comment = testcombackup
+
+# 是否为只读
+read only = yes
+
+# 同步时不再压缩的文件类型
+dont compress = *.gz *.tgz *.zip *.z *.Z *.rpm *.deb *.bz2
+
+# 授权账户
 auth users = root
-#授权账户
+
+# 定义 rsync 客户端用户认证的密码文件
 secrets file = /etc/rsyncd_users.db
-#定义 rsync 客户端用户认证的密码文件
 ```
 
 ### 创建授权备份账户认证的密码文件 (服务端)
 
-```sh
-# ee /etc/rsyncd_users.db
+编辑 `/etc/rsyncd_users.db`，写入：
 
-root:12345678          #格式为 授权账户用户名：密码。支持多个用户，一行一个即可。
+```sh
+root:12345678   # 支持多个用户，一行一个即可。
 ```
 
-#### 修改数据文件权限
+>**注意**
+>
+>服务端的密码文件应该包含用户名和密码的映射关系。格式为 `授权账户用户名:密码`。
+
+### 修改数据文件权限
 
 ```sh
 # chmod 600 /etc/rsyncd_users.db
 ```
 
-**rsync 的服务名是 rsyncd，启动 rsync 服务程序**
+### 服务设置
 
 ```sh
-# rsync --daemon    #启动服务
-
-# sysrc rsyncd_enable="YES"  #设置开机自启动
-
-# /usr/local/etc/rc.d/rsyncd start #启动服务
+# service rsyncd enable # 开机启动
+# service rsyncd start  # 启动服务
 ```
 
-#### **查看 rsync 运行端口号**
+### 查看 rsync 运行端口号
 
 ```sh
 # sockstat | grep rsync
@@ -114,59 +138,9 @@ root     rsync      1185  4  dgram  -> /var/run/logpriv
 root     rsync      1185  5  tcp4   192.168.100.20:873    *:*
 ```
 
-#### **防火墙放行 rsync 服务**
-
-
-编辑 `/etc/ipfw.rules`，写入：
-
-```
-# 定义添加规则的命令，-q 表示静默模式
-cmd="ipfw -q add"
-
-# 清空现有所有规则
-ipfw -q -f flush
-
-# 允许所有经由 lo0（本地回环接口）的流量
-$cmd 10 allow all from any to any via lo0
-
-# 拒绝任何发往 127.0.0.0/8 的流量（防止伪造 loopback）
-$cmd 20 deny all from any to 127.0.0.0/8
-
-# 拒绝任何来自 127.0.0.0/8 的流量（防止伪造 loopback）
-$cmd 30 deny all from 127.0.0.0/8 to any
-
-# 拒绝所有碎片化的 TCP 包（常用于攻击）
-$cmd 40 deny tcp from any to any frag
-
-# 状态规则部分（stateful 防火墙）
-# 检查已有状态连接
-$cmd 50 check-state
-
-# 允许已建立的 TCP 连接
-$cmd 60 allow tcp from any to any established
-
-# 允许所有出站连接，并记录状态（keep-state）
-$cmd 70 allow all from any to any out keep-state
-
-# 允许所有 ICMP 流量（用于 ping 等）
-$cmd 80 allow icmp from any to any
-
-# 为 SSH 打开端口
-# 允许出站 SSH 连接（通常用于客户端连接）
-$cmd 110 allow tcp from any to any 22 out
-
-# 允许入站 SSH 连接（通常用于服务器接收）
-$cmd 120 allow tcp from any to any 22 in
-
-# 为 rsync 打开端口
-# 允许入站 rsync（默认端口 873）连接
-$cmd 130 allow tcp from any to any 873 in
-
-# 拒绝并记录所有其它未匹配的流量（默认策略）
-$cmd 500 deny log all from any to any
-```
-
 ## 服务器 A（发起端）配置
+
+安装好 rsync。
 
 ### 创建本地文件夹 `/home/testBackUp/` 并设置好相关权限
 
@@ -183,21 +157,25 @@ $cmd 500 deny log all from any to any
 
 `testcom` 是要从服务器同步的目录，由上方 `/usr/local/etc/rsync/rsyncd.conf` 自定义。
 
-> **指定密码文件方式**
+### 指定密码文件方式
+
+创建授权备份账户认证的密码文件 (客户端)
+
+编辑 `/etc/rsyncd_users.db`，写入：
+
+```sh
+12345678          
+```
+
+>**注意**
 >
-> 创建授权备份账户认证的密码文件 (客户端)
->
-> ```sh
-> # ee /etc/rsyncd_users.db
->
-> 12345678          #格式：密码
-> ```
->
-> 进行同步：
->
-> ```sh
-> # rsync -auvz --progress --password-file=/etc/rsyncd_users.db root@192.168.100.20::testcom /home/testBackUp
-> ```
+>格式为密码，客户端应仅包含密码。
+
+进行同步：
+
+```sh
+# rsync -auvz --progress --password-file=/etc/rsyncd_users.db root@192.168.100.20::testcom /home/testBackUp
+```
 
 ### 查看同步情况
 
