--- a/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
@@ -2,15 +2,13 @@
 
 ![](../.gitbook/assets/image.png)
 
-## 环境介绍
+## 环境概述
 
-服务器 A、服务器 B 均为 `FreeBSD-12.2-RELEASE-amd64`
+- 服务器 A、B 均为 `FreeBSD-12.2-RELEASE-amd64`
+- 服务器 A（发起端）：`192.168.100.10`
+- 服务器 B（同步源）：`192.168.100.20`
 
-服务器 A（发起端）：`192.168.100.10/24`
-
-服务器 B（同步源）：`192.168.100.20/24`
-
-**设计需求** ：实现服务器 B 的数据同步到服务器 A 上
+设计需求：将服务器 B 的数据同步到服务器 A：B ——> A。即将 B 镜像到 A。
 
 ## 服务器 B（同步源）配置
 
@@ -43,13 +41,14 @@ rsync 提供的一些脚本（例如 rrsync）需要 Python
 而 Python 默认未安装。
 ```
 
-### 新建需要备份的文件夹 `test`，并且设置其属主为 `root`，以及在其内部新建测试文件
+### 配置要备份的文件夹 `test`
+
 
 ```sh
-# mkdir test
-# chown root /home/test/
-# cd /home/test/
-# touch txt001
+# mkdir test # 新建需要备份的文件夹 `test`
+# chown root /home/test/ # 设置其属主为 `root`
+# cd /home/test/ # 切换路径
+# touch txt001 # 在其内部新建测试文件：
 ```
 
 ### 编辑 `rsyncd.conf` 文件
@@ -82,10 +81,9 @@ pid file = /var/run/rsyncd.pid
 # 允许访问的客户机地址
 hosts allow = 192.168.100.0/24
 
-
+# 共享模块名称，自定义的名称，不一定要与同步目录相同
 [testcom]
 
-# 共享模块名称，自定义的名称，不一定要与同步目录相同
 # 同步的目录名，必须是 uid 参数指定的用户和 gid 参数指定的组
 path = /home/test
 
@@ -142,14 +140,18 @@ root     rsync      1185  5  tcp4   192.168.100.20:873    *:*
 
 安装好 rsync。
 
-### 创建本地文件夹 `/home/testBackUp/` 并设置好相关权限
+### 配置 `/home/testBackUp/`
+
+创建本地文件夹 `/home/testBackUp/` 并设置好相关权限：
 
 ```sh
 # mkdir testBackUp
 # chown root:root testBackUp
 ```
 
-### 发起端访问同步源，将文件下载到本地 `/home/testBackUp/` 下载目录下，需要人机交互手动输入密码
+### 发起端访问同步源
+
+将文件下载到本地 `/home/testBackUp/` 下载目录下，需要手动输入密码：
 
 ```sh
 # rsync -avz root@192.168.100.20::testcom /home/testBackUp
