--- a/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
@@ -4,11 +4,11 @@
 
 ## 环境概述
 
-- 服务器 A、B 均为 `FreeBSD-14.2-RELEASE-amd64`
-- 服务器 A（发起端）：`192.168.179.128`
-- 服务器 B（同步源）：`192.168.179.150`
+- 服务器 A、B 均为 `FreeBSD-12.2-RELEASE-amd64`
+- 服务器 A（发起端、客户端）：`192.168.100.10`
+- 服务器 B（同步源、服务端）：`192.168.100.20`
 
-设计需求：将服务器 B 的数据同步到服务器 A：B ——> A。即将 B 镜像到 A。
+设计需求：将服务器 B 的数据同步到服务器 A：B（服务端） ——> A（客户端）。即将 B 镜像到 A。
 
 ## 服务器 B（同步源）配置
 
