重写：第 16.6 节 rsync 同步服务 (#311)
* Update di-16.6-jie-rsync-tong-bu-fu-wu.md

* Update di-16.6-jie-rsync-tong-bu-fu-wu.md

* Update di-16.6-jie-rsync-tong-bu-fu-wu.md

* Update image.png

* Update CHANGELOG.md

--- a/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
@@ -4,9 +4,11 @@
 
 ## 环境概述
 
-- 服务器 A、B 均为 `FreeBSD-12.2-RELEASE-amd64`
-- 服务器 A（发起端、客户端）：`192.168.100.10`
-- 服务器 B（同步源、服务端）：`192.168.100.20`
+服务器 A、B 均为 `FreeBSD-14.2-RELEASE-amd64`。
+
+- 服务器 A（发起端、客户端）：`192.168.100.128`
+- 服务器 B（同步源、服务端）：`192.168.100.150`
+
 
 设计需求：将服务器 B 的数据同步到服务器 A：B（服务端） ——> A（客户端）。即将 B 镜像到 A。
 
@@ -45,10 +47,10 @@ rsync 提供的一些脚本（例如 rrsync）需要 Python
 
 
 ```sh
-# mkdir test # 新建需要备份的文件夹 `test`
+# mkdir -p /home/test # 新建需要备份的文件夹 `test`
 # chown root /home/test/ # 设置其属主为 `root`
 # cd /home/test/ # 切换路径
-# touch txt001 # 在其内部新建测试文件：
+# touch txt001 txt002 # 在其内部新建测试文件
 ```
 
 ### 编辑 `rsyncd.conf` 文件
@@ -67,7 +69,7 @@ gid = wheel
 use chroot = yes
 
 # 监听地址
-address = 192.168.100.20
+address = 192.168.179.150
 
 # 用于通信的 TCP 端口，缺省是 873
 port = 873
@@ -79,7 +81,7 @@ log file = /var/log/rsyncd.log
 pid file = /var/run/rsyncd.pid
 
 # 允许访问的客户机地址
-hosts allow = 192.168.100.0/24
+hosts allow = 192.168.179.128
 
 # 共享模块名称，自定义的名称，不一定要与同步目录相同
 [testcom]
@@ -105,7 +107,7 @@ secrets file = /etc/rsyncd_users.db
 
 ### 创建授权备份账户认证的密码文件 (服务端)
 
-编辑 `/etc/rsyncd_users.db`，写入：
+- 编辑 `/etc/rsyncd_users.db`，写入：
 
 ```sh
 root:12345678   # 支持多个用户，一行一个即可。
@@ -115,7 +117,7 @@ root:12345678   # 支持多个用户，一行一个即可。
 >
 >服务端的密码文件应该包含用户名和密码的映射关系。格式为 `授权账户用户名:密码`。
 
-### 修改数据文件权限
+- 限制数据文件权限，否则会报错：
 
 ```sh
 # chmod 600 /etc/rsyncd_users.db
@@ -132,8 +134,7 @@ root:12345678   # 支持多个用户，一行一个即可。
 
 ```sh
 # sockstat | grep rsync
-root     rsync      1185  4  dgram  -> /var/run/logpriv
-root     rsync      1185  5  tcp4   192.168.100.20:873    *:*
+root     rsync       1198 5   tcp4   192.168.179.150:873   *:*
 ```
 
 ## 服务器 A（发起端）配置
@@ -145,8 +146,8 @@ root     rsync      1185  5  tcp4   192.168.100.20:873    *:*
 创建本地文件夹 `/home/testBackUp/` 并设置好相关权限：
 
 ```sh
-# mkdir testBackUp
-# chown root:root testBackUp
+# mkdir -p /home/testBackUp
+# chown root:wheel /home/testBackUp/
 ```
 
 ### 发起端访问同步源
@@ -154,19 +155,33 @@ root     rsync      1185  5  tcp4   192.168.100.20:873    *:*
 将文件下载到本地 `/home/testBackUp/` 下载目录下，需要手动输入密码：
 
 ```sh
-# rsync -avz root@192.168.100.20::testcom /home/testBackUp
+# rsync -avz root@192.168.179.150::testcom /home/testBackUp
+Password: # 输入服务器 B 设置的密码，即 123456
+receiving incremental file list
+./
+txt001
+txt002
+
+sent 65 bytes  received 151 bytes  86.40 bytes/sec
+total size is 0  speedup is 0.00
 ```
 
 `testcom` 是要从服务器同步的目录，由上方 `/usr/local/etc/rsync/rsyncd.conf` 自定义。
 
-### 指定密码文件方式
+#### 附录：指定密码文件方式
 
-创建授权备份账户认证的密码文件 (客户端)
+创建授权备份账户认证的密码文件（客户端）。
 
-编辑 `/etc/rsyncd_users.db`，写入：
+- 编辑 `/etc/rsyncd_users.db`，写入：
 
 ```sh
 12345678          
+```
+
+- 限制权限，否则报错 `ERROR: password file must not be other-accessible`。
+
+```
+# chmod 600 /etc/rsyncd_users.db
 ```
 
 >**注意**
@@ -176,13 +191,23 @@ root     rsync      1185  5  tcp4   192.168.100.20:873    *:*
 进行同步：
 
 ```sh
-# rsync -auvz --progress --password-file=/etc/rsyncd_users.db root@192.168.100.20::testcom /home/testBackUp
+# rsync -auvz --progress --password-file=/etc/rsyncd_users.db root@192.168.179.150::testcom /home/testBackUp
+receiving incremental file list
+./
+txt001
+              0 100%    0.00kB/s    0:00:00 (xfr#1, to-chk=1/3)
+txt002
+              0 100%    0.00kB/s    0:00:00 (xfr#2, to-chk=0/3)
+
+sent 65 bytes  received 151 bytes  432.00 bytes/sec
+total size is 0  speedup is 0.00
 ```
 
 ### 查看同步情况
 
 ```sh
-# ls -l /home/testBackUp/
-total 0
--rw-r--r-- 1 root root 0 Feb  2 22:27 txt001
+root@ykla:~ # ls -l  /home/testBackUp
+total 1
+-rw-r--r--  1 root wheel 0 Apr 17 18:33 txt001
+-rw-r--r--  1 root wheel 0 Apr 17 18:33 txt002
 ```
