--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -1,13 +1,17 @@
 # 第 22.9 节 Shell
 
-## csh 与 tsch 的关系
-
-有必要注意的是，FreeBSD 中 csh 就是 tcsh。二者没有区别。你从源代码 <https://github.com/freebsd/freebsd-src/blame/main/bin/csh/Makefile> 就能看出来，同时 man csh 也会被重定向至 tcsh。
 
 
 ## 配置 csh shell
 
 csh（C shell，灵感来自 C 语言，语言亦类似，作者是 Bill Joy）是 FreeBSD 基本系统内置的 shell，**过去**是 root 用户的默认 shell。
+
+>**技巧**
+>
+>csh 与 tsch 的关系
+>
+>有必要注意的是，FreeBSD 中 csh 就是 tcsh。二者没有区别。你从源代码 <https://github.com/freebsd/freebsd-src/blame/main/bin/csh/Makefile> 就能看出来，同时 man csh 也会被重定向至 tcsh。
+
 
 > **注意**
 >
