--- a/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
+++ b/di-22-zhang-bian-cheng-yu-kai-fa/di-22.9-jie-csh-yu-qi-ta-shell.md
@@ -131,7 +131,7 @@ source /usr/local/share/zsh-syntax-highlighting/zsh-syntax-highlighting.zsh
 chsh: user information updated
 ```
 
-编辑 `~/.zshrc`（会自动创建），添加下面几行：
+编辑 `~/.zshrc`，添加下面几行：
 
 ```sh
 source /usr/local/share/zsh-autosuggestions/zsh-autosuggestions.zsh
