--- a/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
+++ b/di-16-zhang-fu-wu-qi/di-16.7-jie-samba-fu-wu-qi.md
@@ -1,7 +1,10 @@
 # 第 16.7 节 Samba 服务器
 
-samba 须开放防火墙的 tcp/139、445 端口；udp/137、138 端口。
+Samba 是对 SMB/CIFS（Server Message Block，服务器消息块）协议的再实现。CIFS（Common Internet File System，通用 Internet 文件系统）是 SMB 的衍生协议。
 
+Samba 也是“桑巴舞”的葡萄牙语/英语对应的单词。有热情奔放的含义。
+
+samba 须开放防火墙的 tcp/139、445 端口；udp/137、138 端口。
 
 ## 安装 samba
 
