解释部分术语来源 (#314)
* Update SUMMARY.md

* chore: sync headers with SUMMARY.md

* Update mulu.yml

* 从 SUMMARY.md 更新 mu-lu.md [skip ci]

* Update di-16.7-jie-samba-fu-wu-qi.md

* Update di-16.6-jie-rsync-tong-bu-fu-wu.md

---------

Co-authored-by: ykla <10327999+ykla@users.noreply.github.com>

--- a/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
+++ b/di-16-zhang-fu-wu-qi/di-16.6-jie-rsync-tong-bu-fu-wu.md
@@ -1,8 +1,11 @@
-# 第 16.6 节 rsync 同步服务
+# 第 16.6 节 Rsync 同步服务
 
-![](../.gitbook/assets/image.png)
+Rsync 即“remote sync”，即代表“远程同步”的意思。
+
 
 ## 环境概述
+
+![](../.gitbook/assets/image.png)
 
 服务器 A、B 均为 `FreeBSD-14.2-RELEASE-amd64`。
 
